created sidebar parent template for faculty pages

--- a/src/templates/_base.html
+++ b/src/templates/_base.html
@@ -15,16 +15,15 @@
     <style>
       @import url("../static/css/fonts.css");
     </style>
-    {% block css %}{% endblock %}
     <!-- scripts -->
     <script defer src="..\static\js\jquery-3.7.1.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script defer src="..\static\js\bootstrap.bundle.min.js"></script>
-    {% block js %}{% endblock %}
+    {% block header %}{% endblock %}
   </head>
   <body>
-    {% include "core/navigation.html" %}
-    
+    {% include "core/navbar.html" %}
+
     <div class="container">
       
       <!-- messages -->
