student templates setup

--- a/src/templates/core/student/qrcode.html
+++ b/src/templates/core/student/qrcode.html
@@ -1,7 +1,7 @@
 <!-- core/qr_code.html -->
 
-{% extends "_base.html" %}
-{% block content %}
+{% extends "core/student/sidebar.html" %}
+{% block body %}
 
     <title>QR Code</title>
 </head>
