--- a/src/templates/core/student/index.html
+++ b/src/templates/core/student/index.html
@@ -1,14 +1,8 @@
-{% extends "_base.html" %}
-{% block content %}
+{% extends "core/student/sidebar.html" %}
 
-<h1 class="text-center">Welcome {{current_user.email}}!</h1>
-<form action="{{ url_for('core.add') }}" method="post">
-    <input type="submit" name="add_attendance"/>   
+{% block body %}
 
-     <!-- Add a button to navigate to qr_code.html -->
-     <a href="/view_qr_code" class="btn btn-primary">View QR Code</a>
-</form>
-
+<h1 class="h3 mb-4"><strong> Your Attendance Record</strong></h1>
 <table>
     <tr>
         <th>
