--- a/src/templates/core/navbar.html
+++ b/src/templates/core/navbar.html
@@ -13,7 +13,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="myAccountDropdown" role: "button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-right: 40px;">
-              My Account
+              {{current_user.first_name}} {{current_user.last_name}}
             </a>
             <div class="dropdown-menu" aria-labelledby="myAccountDropdown">
               <a class="dropdown-item" href="#">Account Settings</a>
