--- a/src/templates/core/faculty/records.html
+++ b/src/templates/core/faculty/records.html
@@ -13,25 +13,27 @@
 <table id="studentTable" class="table datatables table-bordered table-condensed table-striped p-0 m-0" >
     <thead >
         <tr>
-            <th style="color: #800000;">Surname</th>
-            <th style="color: #800000;">Given Name</th>
-            <th style="color: #800000;">Section</th>
-            <th style="color: #800000;">Present</th>
-            <th style="color: #800000;">Absent</th> 
-            <th style="color: #800000;">Late</th>
+          <th style="color: #800000;">Surname</th>
+          <th style="color: #800000;">Given Name</th>
+          <th style="color: #800000;">Middle Name</th>
+          <th style="color: #800000;">Section</th>
+          <th style="color: #800000;">Present</th>
+          <th style="color: #800000;">Late</th> 
+          <th style="color: #800000;">Absent</th>
         </tr>
     </thead>
     <tbody>
-        {% for student in students %}
+      {% for s in students %}
         <tr class="header">
-            <td>{{ student.last_name }} </td>
-            <td>{{ student.first_name }} </td>
-            <td>{{ 'Section' }}</td>
-            <td>{{ 'Present' }}</td>
-            <td>{{ 'Absent' }}</td> 
-            <td>{{ 'Late' }}</td>
+          <td>{{ s.last_name }} </td>
+          <td>{{ s.first_name }} </td>
+          <td>{{ s.middle_name }} </td>
+          <td>{{ s.section_code }}</td>
+          <td>{{ s.present_count }}</td>
+          <td>{{ s.late_count }}</td> 
+          <td>{{ s.absent_count }}</td>
         </tr>
-        {% endfor %}
+      {% endfor %}
     </tbody>
 </table>
 </div>
