--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -65,6 +65,8 @@
 <!-- Google Pie Chart container -->
 <div id="google-pie-chart" style="width: 30%; height: 300px;"></div>
 
+<!-- ADD: START/STOP ATTENDANCE BUTTON W/FEATURES 1) CUSTOM TIMER FOR LATE/ABSENT 2) SUBJECT LIST DROPDOWN (TAKEN FROM CLASSLIST) -->
+
 <!--Table-->
 <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; height: 40%;">
   <thead>
