--- a/src/templates/accounts/register.html
+++ b/src/templates/accounts/register.html
@@ -1,101 +1,164 @@
-{% extends "accounts/login.html" %}
+{% extends "_base.html" %}
 
-{% block form_container %}
-<div class="col-lg-6 col-md-6 pup-form-container" style="background: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative;">
+{% block content %}
 
-  <div class="col-lg-9 col-md-12 col-sm-9 col-xs-12 pup-form" style="display: flex; flex-direction: column; justify-content: center; min-height: 100vh;">
-    <main class="form-signin w-100 m-auto">
-      <form role="form" method="post" action="">
-        {{ form.csrf_token }}
+<div class="container-fluid" style="padding: 0;">
+  <div class="row g-x" style="margin-right: 0; margin-left: 0;">
 
-        <h1 class="h3 mb-3 fw-normal text-center" style="font-weight: bolder;">Create Account</h1>
-        
-        <div class="row">
-          <div class="col-md-6">
-          </div>
-            <!-- Email -->
-            <div class="form-floating">
-              {{ form.email(placeholder="Email", class="form-control mb-2") }}
-              {{ form.email.label }}
-              {% if form.email.errors %}
-                {% for error in form.email.errors %}
+    {% include "accounts/gradient.html" %}
+
+    <!-- FORM CONTAINER BEGIN -->
+    {% block form_container %}
+    <div class="col-lg-6 col-md-6 pup-form-container"
+      style="background: #fff; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative;">
+
+      <div class="col-lg-9 col-md-12 col-sm-9 col-xs-12 pup-form"
+        style="display: flex; flex-direction: column; justify-content: center; min-height: 100vh;">
+        <main class="form-signin w-100 m-auto">
+          <form role="form" method="post" action="">
+            {{ form.csrf_token }}
+
+            <h1 class="h3 mb-3 fw-normal text-center" style="font-weight: bolder;">Create Account</h1>
+
+            <div class="row">
+              <div class="col-md-6">
+              </div>
+              <!-- Email -->
+              <div class="form-floating">
+                {{ form.email(placeholder="Email", class="form-control mb-2") }}
+                {{ form.email.label }}
+                {% if form.email.errors %}
+                  {% for error in form.email.errors %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              </div>
+
+              <!-- Password -->
+              <div class="form-floating position-relative">
+                {{ form.password(placeholder="Password", class="form-control mb-2", id="password-input") }}
+                {{ form.password.label }}
+                <i class="fa-regular fa-eye-slash" id="toggleButton" onclick="togglePasswordVisibility()"
+                  style="position: absolute; top: 55%; right: 20px; transform: translateY(-50%); cursor: pointer; width: 25px;">
+                </i>
+                {% if form.password.errors %}
+                  {% for error in form.password.errors %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              </div>
+              <div class="text-muted">
+                Password must be at least 8 characters long and include at least one uppercase letter, one lowercase
+                letter, one number, and one special character.
+              </div>
+
+              <!-- Confirm Password -->
+              <div class="form-floating position-relative">
+                {{ form.confirm(placeholder="Confirm Password", class="form-control mb-2", id="confirm-password-input") }}
+                {{ form.confirm.label }}
+                <i class="fa-regular fa-eye-slash" id="confirm-toggleButton" onclick="toggleConfirmPasswordVisibility()"
+                style="position: absolute; top: 55%; right: 20px; transform: translateY(-50%); cursor: pointer; width: 25px;">
+                </i>
+                {% if form.confirm.errors %}
+                  {% for error in form.confirm.errors %}
                   <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                  </div>
+                  {{ error }}
+                 </div>
                 {% endfor %}
-              {% endif %}
+               {% endif %}
+              </div>
+
+              <!-- Names -->
+              <div class="form-floating">
+                {{ form.first_name(placeholder="First Name", class="form-control mb-2") }}
+                {{ form.first_name.label }}
+                {% if form.first_name.errors %}
+                  {% for error in form.first_name.errors %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              </div>
+
+              <div class="form-floating">
+                {{ form.middle_name(placeholder="Middle Name (Optional)", class="form-control mb-2") }}
+                {{ form.middle_name.label }}
+                {% if form.middle_name.errors %}
+                  {% for error in form.middle_name.errors %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              </div>
+
+              <div class="form-floating">
+                {{ form.last_name(placeholder="Last Name", class="form-control mb-2") }}
+                {{ form.last_name.label }}
+                {% if form.last_name.errors %}
+                  {% for error in form.last_name.errors %}
+                    <div class="alert alert-danger" role="alert">
+                      {{ error }}
+                    </div>
+                  {% endfor %}
+                {% endif %}
+              </div>
             </div>
-          
 
-          <!-- Password -->
-          <div class="form-floating">
-            {{ form.password(placeholder="Password", class="form-control mb-2") }}
-            {{ form.password.label }}
-            {% if form.password.errors %}
-              {% for error in form.password.errors %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          </div>
+            <button class="w-100 btn btn-lg btn-primary"
+              style="background-color: #800000; border-radius: 40px; margin-top: 20px; font-family: 'Roboto'; font-weight: 550; font-size: 17px;"
+              type="submit">Sign up</button>
+            <p class="text-center mt-3">Already registered? <a href="{{ url_for('accounts.login') }}">Login now</a></p>
+          </form>
+        </main>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
 
-          <!-- Confirm Password -->
-          <div class="form-floating">
-            {{ form.confirm(placeholder="Confirm Password", class="form-control mb-2") }}
-            {{ form.confirm.label }}
-            {% if form.confirm.errors %}
-              {% for error in form.confirm.errors %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          </div>
 
-          <!-- Names -->
-          <div class="form-floating">
-            {{ form.first_name(placeholder="First Name", class="form-control mb-2") }}
-            {{ form.first_name.label }}
-            {% if form.first_name.errors %}
-              {% for error in form.first_name.errors %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          </div>
+    <script>
+      function togglePasswordVisibility() {
+        var passwordField = document.getElementById("password-input");
+        var toggleButton = document.getElementById("toggleButton");
 
-          <div class="form-floating">
-            {{ form.middle_name(placeholder="Middle Name (Optional)", class="form-control mb-2") }}
-            {{ form.middle_name.label }}
-            {% if form.middle_name.errors %}
-              {% for error in form.middle_name.errors %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          </div>
+        if (passwordField.type === "password") {
+          passwordField.type = "text";
+          toggleButton.classList.remove("fa-eye-slash");
+          toggleButton.classList.add("fa-eye");
+        } else {
+          passwordField.type = "password";
+          toggleButton.classList.remove("fa-eye");
+          toggleButton.classList.add("fa-eye-slash");
+        }
+      }
+    </script>
+    
+    <script>
+      function toggleConfirmPasswordVisibility() {
+        var confirmPasswordField = document.getElementById("confirm-password-input");
+        var confirmToggle = document.getElementById("confirm-toggleButton");
+    
+        if (confirmPasswordField.type === "password") {
+          confirmPasswordField.type = "text";
+          confirmToggle.classList.remove("fa-eye-slash");
+          confirmToggle.classList.add("fa-eye");
+        } else {
+          confirmPasswordField.type = "password";
+          confirmToggle.classList.remove("fa-eye");
+          confirmToggle.classList.add("fa-eye-slash");
+        }
+      }
+    </script>
 
-          <div class="form-floating">
-            {{ form.last_name(placeholder="Last Name", class="form-control mb-2") }}
-            {{ form.last_name.label }}
-            {% if form.last_name.errors %}
-              {% for error in form.last_name.errors %}
-                <div class="alert alert-danger" role="alert">
-                  {{ error }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          </div>
-        </div>
+    {% endblock %}
+    <!-- FORM CONTAINER END -->
 
-        <button class="w-100 btn btn-lg btn-primary" type="submit" style="background-color: #800000; border-radius: 40px; margin-top: 20px; font-family: 'Roboto'; font-weight: 550; font-size: 17px;">Sign up</button>
-        <p class="text-center mt-3">Already registered? <a href="{{ url_for('accounts.login') }}">Login now</a></p>
-      </form>
-    </main>
   </div>
-  <div class="col-md-4"></div>
 </div>
+
 {% endblock %}
