--- a/src/templates/core/faculty/sidebar.html
+++ b/src/templates/core/faculty/sidebar.html
@@ -3,6 +3,20 @@
 {% block header %}{% endblock %}
 
 {% block content %}
+
+<style>
+    .box {
+     -ms-flex: 1 1 auto;
+     flex: 1 1 auto;
+     margin-top: 17px;
+     padding: 1.25rem;
+     border: 0.001px solid rgba(0, 0, 0, 0.16);
+     border-top: 5px solid maroon;
+     border-radius: 10px;
+     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+ }
+
+</style>
 <!-- Sidebar -->
 <div class="container-fluid overflow-hidden">
     <div class="row vh-100 overflow-auto">
@@ -34,7 +48,9 @@
         </div>
         <div class="col d-flex flex-column h-100" >
             <div class="container-fluid p-0">
+                <div class="box">
                 {% block body %}{% endblock %}
+                </div>
             </div>
         </div>
     </div>
