--- a/src/templates/core/student/sidebar.html
+++ b/src/templates/core/student/sidebar.html
@@ -4,19 +4,7 @@
 
 {% block content %}
 <!-- Sidebar -->
-<style>
-       .box {
-        -ms-flex: 1 1 auto;
-        flex: 1 1 auto;
-        margin-top: 17px;
-        padding: 1.25rem;
-        border: 0.001px solid rgba(0, 0, 0, 0.16);
-        border-top: 5px solid maroon;
-        border-radius: 10px;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
-    }
 
-</style>
 <div class="container-fluid overflow-hidden">
     <div class="row vh-100 overflow-auto">
         <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-light d-flex sticky-top">
@@ -38,7 +26,14 @@
         
             <div class="col d-flex flex-column h-100" >
                 <div class="container-fluid p-0">
-            <div class="box">
+            <div class="box" style="-ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+            margin-top: 17px;
+            padding: 1.25rem;
+            border: 0.001px solid rgba(0, 0, 0, 0.16);
+            border-top: 5px solid maroon;
+            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;"" >
                 {% block body %}
                 
 
