--- a/src/templates/core/faculty/index.html
+++ b/src/templates/core/faculty/index.html
@@ -63,7 +63,7 @@
     </div>
 </div>
 <!-- Google Pie Chart container -->
-<div id="google-pie-chart" style="width: 30%; height: 300px;"></div>
+<div id="google-pie-chart" style="width: 350px; height: 300px;"></div>
 
 <!--Table-->
 <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; height: 40%;">
