--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -5,12 +5,11 @@
 {% endblock %}
 
 {% block body %}
-<div class="d-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3"><strong> Real Time Attendance</strong></h1>
-    <div class="input-group" style="width: 25%;">
-        <input type="text" class="form-control" id="search-input" placeholder="Search.." aria-label="Search" aria-describedby="search-button" 
-        style="margin-top: 15px;  
-        border-color: black;" >
+<div class="d-flex flex-column mb-4">
+    <h1 class="h3 mb-2"><strong> Real Time Attendance</strong></h1>
+    <hr>
+    <div class="input-group" style="width: 225px;">
+        <input type="text" class="form-control" id="search-input" placeholder="Search.." aria-label="Search" aria-describedby="search-button" style="margin-top: 5px; border-color: black;">
     </div>
 </div>
 
