--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css"> <!-- Replace with the correct path or use a CDN for Font Awesome -->
   <style>
-body {
+      body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,6 +17,16 @@ body {
   margin: 0;
   overflow: hidden;
   position: relative;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 0, 0, 0.53); /* Adjust the alpha value for transparency */
+  z-index: -1;
 }
 
 body::before {
@@ -28,10 +38,11 @@ body::before {
   height: 100%;
   background-image: url("../static/images/Lagoon.jpg");
   background-size: cover;
-  filter: blur(0.9px); /* Adjust the blur value as needed */
-  opacity: 0.9; /* Adjust the opacity value (0 to 1) as needed */
+  filter: blur(0.9px);
+  opacity: 0.9;
   z-index: -2;
 }
+
 
 .pup-form-container {
   background: #fff;
@@ -94,7 +105,7 @@ body::before {
 </style>
 </head>
 <body>
-
+  <div id="overlay"></div>
   <div class="pup-form-container">
     <img src="../static/images/PUP logo.png" alt="PUP Logo" style="display: block; margin: 0 auto; max-width: 80px; max-height: 80px; margin-bottom: 10px;">
     <div class="login-header">PASOK LOGIN</div>
