--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -10,38 +10,37 @@
   <link rel="stylesheet" href="..\static\fontawesome\css\all.min.css"> <!-- Replace with the correct path or use a CDN for Font Awesome -->
   <style>
       body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden;
-  position: relative;
-}
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
+      position: relative;
+    }
 
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(128, 0, 0, 0.53); /* Adjust the alpha value for transparency */
-  z-index: -1;
-}
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(128, 0, 0, 0.7); /* Maroon color with some transparency */
+      z-index: -1;
+    }
 
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../static/images/Lagoon.jpg");
-  background-size: cover;
-  filter: blur(0.9px);
-  opacity: 0.9;
-  z-index: -2;
-}
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("../static/images/Lagoon.jpg");
+      background-size: cover;
+      opacity: 0.9;
+      z-index: -2;
+    }
 
 
 .pup-form-container {
