--- a/src/templates/core/student/index.html
+++ b/src/templates/core/student/index.html
@@ -84,22 +84,29 @@
 
         <div id="attendancePieChart"></div>
 
-        <table class="attendance-table">
-            <tr>
-                <th>Attendance ID</th>
-                <th>User ID</th>
-                <th>Created</th>
-                <th>Attendance Status</th>
-            </tr>
-            {% for attendance in attendance_records %}
-            <tr>
-                <td>{{ attendance.id }}</td>
-                <td>{{ attendance.user_id }}</td>
-                <td>{{ attendance.created }}</td>
-                <td>{{ attendance.attendance_status }}</td>
-            </tr>
-            {% endfor %}
+        <table class="table datatables table-bordered table-condensed table-striped p-0 m-0 dataTable no-footer dtr-inline" id="DataTables_Table_0" role="grid" aria-describedby="DataTables_Table_0_info" style="width: 100%; height: 40%;">
+            <thead>
+                <tr role="row">
+                    <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Attendance ID</th>
+                    <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">User ID</th>
+                    <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Created</th>
+                    <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Attendance Status</th>
+                    <th class="sorting_disabled" rowspan="1" colspan="1" style="color: #800000;">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for attendance in attendance_records %}
+                <tr role="row">
+                    <td>{{ attendance.id }}</td>
+                    <td>{{ attendance.user_id }}</td>
+                    <td>{{ attendance.created }}</td>
+                    <td>{{ attendance.attendance_status }}</td>
+                    
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
+        
     </div>
 
 
