--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -5,69 +5,39 @@
 {% endblock %}
 
 {% block body %}
-<div class="d-flex flex-column mb-4">
-    <h1 class="h3 mb-2"><strong> Real Time Attendance</strong></h1>
-    <hr>
-    <div class="input-group" style="width: 225px;">
-        <input type="text" class="form-control" id="search-input" placeholder="Search.." aria-label="Search" aria-describedby="search-button" style="margin-top: 5px; border-color: black;">
+<div class="d-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3"><strong> Real Time Attendance</strong></h1>
+    <div class="input-group" style="width: 25%;">
+        <input type="text" class="form-control" id="search-input" placeholder="Search.." aria-label="Search" aria-describedby="search-button" 
+        style="margin-top: 15px;  
+        border-color: black;" >
     </div>
 </div>
 
-<h6><strong>Instructor: </strong></h6>
-<h6 style="margin-top: 15px;"><strong>Subject:  </strong></h6>
-
-<!-- For demonstration purposes -->
 <table class="table datatables table-bordered table-condensed table-striped p-0 m-0">
     <thead>
         <tr>
-            <th style="color: #800000;">Student Name</th>
+            <th style="color: #800000;">Surname</th>
+            <th style="color: #800000;">Given Name</th>
             <th style="color: #800000;">Section</th>
             <th style="color: #800000;">Date & Time</th>
             <th style="color: #800000;">Status</th>
         </tr>
     </thead>
     <tbody>
-        {% for i in range(15) %}
+        {% for au in attendance_user %}
         <tr data-filter="{{ 'Student Name ' ~ i }}" class="row-to-filter">
-            <td>{{ 'Student Name ' ~ i }}</td>
-            <td>{{ 'Section ' ~ i }}</td>
-            <td>{{ 'Date & Time ' ~ i }}</td>
-            <td>{{ 'Status ' ~ i }}</td>
-        </tr>
-        
-        
-        
-        {% endfor %}
-    </tbody>
-</table>
-</div>
-<!-- can  generate the table rows based on the actual data:-->
-
-<!--<table class="table datatables table-bordered table-condensed table-striped p-0 m-0">
-    <thead>
-        <tr>
-            <th style="color: #800000;">Student Name</th>
-            <th style="color: #800000;">Section</th>
-            <th style="color: #800000;">Date & Time</th>
-            <th style="color: #800000;">Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for person in registered_people %}
-        <tr data-filter="{{ person.name }}" class="row-to-filter">
-            <td>{{ person.name }}</td>
-            <td>{{ person.section }}</td>
-            <td>{{ person.date_time }}</td>
-            <td>{{ person.status }}</td>
+            <td>{{ au.last_name }}</td>
+            <td>{{ au.first_name }}</td>
+            <td>{{ au.section_code }}</td>
+            <td>{{ au.created }}</td>
+            <td>{{ au.attendance_status }}</td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
--->
 
 <script>
-   
-
     document.getElementById("search-input").addEventListener("input", function () {
         filterTable();
     });
