--- a/src/templates/core/faculty/realtime.html
+++ b/src/templates/core/faculty/realtime.html
@@ -14,28 +14,30 @@
     </div>
 </div>
 
-<table class="table datatables table-bordered table-condensed table-striped p-0 m-0">
-    <thead>
-        <tr>
-            <th style="color: #800000;">Surname</th>
-            <th style="color: #800000;">Given Name</th>
-            <th style="color: #800000;">Section</th>
-            <th style="color: #800000;">Date & Time</th>
-            <th style="color: #800000;">Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for au in attendance_user %}
-        <tr data-filter="{{ 'Student Name ' ~ i }}" class="row-to-filter">
-            <td>{{ au.last_name }}</td>
-            <td>{{ au.first_name }}</td>
-            <td>{{ au.section_code }}</td>
-            <td>{{ au.created }}</td>
-            <td>{{ au.attendance_status }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="table-responsive" style="overflow: hidden;">
+    <table class="table datatables table-bordered table-condensed table-striped p-0 m-0" style="width: 100%; border: 1px solid #696969; border-radius: 10px;">
+        <thead>
+            <tr role="row">
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Surname</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Given Name</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Section</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Date & Time</th>
+                <th class="sorting_disabled" rowspan="1" colspan="1" style="background-color: #701c1c; color: white;">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for au in attendance_user %}
+            <tr role="row" style="background-color: #f9f9f9;">
+                <td>{{ au.last_name }}</td>
+                <td>{{ au.first_name }}</td>
+                <td>{{ au.section_code }}</td>
+                <td>{{ au.created }}</td>
+                <td>{{ au.attendance_status }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 <script>
     document.getElementById("search-input").addEventListener("input", function () {
