--- a/src/templates/core/faculty/sidebar.html
+++ b/src/templates/core/faculty/sidebar.html
@@ -45,7 +45,7 @@
                     </li>
                     <li class="nav-item ">
                         <a href=" {{ url_for('core.qrscanner') }}" class="nav-link px-sm-0 px-2 ms-2">
-                        <i class="fa-solid fa-list" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">QR Scanner</span>
+                        <i class="fa-solid fa-qrcode" style="color: #6c757d;"></i><span class="ms-1 d-none d-sm-inline" style="color: black; font-size: 15px;">QR Scanner</span>
                         </a>
                     </li>
                 </ul>
